--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@
   height: 100vh; /* Set the container height to 100vh */
 }
 
+.side-menu h2 {
+  text-align: center;
+}
+
 .side-menu {
   width: 30vh;
   background-color: #1F2123;
@@ -87,6 +91,7 @@
   padding: 5px;
   font-size: 16px;
   background-color: #454654;
+  color: white;
 }
 
 /* Rest of your custom styles */
