CHANGE: Auto scroll to bottm when new chat input is submitted

--- a/src/App.css
+++ b/src/App.css
@@ -102,8 +102,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 1vh;
   background-color: #272729;
+  width: 90%;
 }
 
 .chatbot-form input[type="text"] {
