--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,22 @@
   color: white;
 }
 
+/* .sign-in-modal {
+  background-color: #1E2125;
+  height: 50vh;
+  width: 50vh;
+} */
+
+.outer-sign-in-modal {
+  background-color: #1E2125;
+  width: 50vh;
+  height: 50vh;
+  margin-left: 40%;
+  margin-right: 40%;
+  text-align: center;
+
+}
+
 .side-menu button {
   background-color: #1E2125;
   outline: 0.5px solid  #313133;
