--- a/src/App.css
+++ b/src/App.css
@@ -174,9 +174,18 @@
   transform: translateX(-100%);
 }
 
+
+/* .login-modal {
+  background-color: #1E2125;
+  width: 100%;
+  height: 100%;
+} */
+
+
 .login-modal-input {
   width: 75%;
   height: 4vh;
+  margin-top: 2vh;
   border-radius: 10px;
 }
 
@@ -195,6 +204,10 @@
   margin-right: 2vh;
   font-size: 16px;
   font-weight: bold;
+}
+
+.login-modal form {
+  color: white;
 }
 
 .login-modal-form {
