CHANGE: delay added to welcome message so it will not display  before laoding message history if user is logged in

--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,7 @@
   color: white;
 }
 
-.ReactModal__Overlay {
+/* .ReactModal__Overlay {
   opacity: 0;
   transition: opacity 500ms ease-in-out;
 }
@@ -231,5 +231,16 @@
 
 .ReactModal__Overlay--before-close{
   opacity: 0;
+} */
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 3.3s ease-in-out;
 }
+
+.fade-in.active {
+  opacity: 1;
+}
+
+
 /* Rest of your custom styles */
