--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,10 @@
 
 }
 
+.sign-in-invalid-msg {
+  color: red;
+}
+
 .side-menu button {
   background-color: #1E2125;
   outline: 0.5px solid  #313133;
@@ -135,7 +139,7 @@
 }
 
 .chatbot-messages {
-  /* padding-top: 5vh; */
+  padding-top: 3vh;
   flex-grow: 1;
   width: 100%;
   background-color: #272729;
@@ -168,14 +172,28 @@
 .chatbot-form-button {
   background-color: #454654;
   place-items: center;
-  width: 7.5%;
+  width: 20%;
   color: white;
   border-style: solid;
   box-shadow: none;
   border-radius: 15px;
   height: 5vh;
-  margin-left: 2.5vh;
-  margin-right: 2vh;
+  margin-left: 0.75vh;
+  /* margin-right: 2vh; */
+  font-size: 16px;
+  font-weight: bold;}
+
+.chatbot-login-button {
+  background-color: #454654;
+  place-items: center;
+  width: 20%;
+  color: white;
+  border-style: solid;
+  box-shadow: none;
+  border-radius: 15px;
+  height: 4vh;
+  margin-left: 0.75vh;
+  margin-top: 2vh;
   font-size: 16px;
   font-weight: bold;}
 
